--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,147 @@ body {
     font-family: 'Koodak';
 }
 
+.m-1 {
+    margin: 1rem;
+}
+
+.m-2 {
+    margin: 2rem;
+}
+
+.m-3 {
+    margin: 3rem;
+}
+
+.m-4 {
+    margin: 4rem;
+}
+
+.m-5 {
+    margin: 5rem;
+}
+
+.mv-1 {
+    margin: 1rem 0;
+}
+
+.mv-2 {
+    margin: 2rem 0;
+}
+
+.mv-3 {
+    margin: 3rem 0;
+}
+
+.mv-4 {
+    margin: 4rem 0;
+}
+
+.mv-5 {
+    margin: 5rem 0;
+}
+
+.mh-1 {
+    margin: 0 1rem;
+}
+
+.mh-2 {
+    margin: 0 2rem;
+}
+
+.mh-3 {
+    margin: 0 3rem;
+}
+
+.mh-4 {
+    margin: 0 4rem;
+}
+
+.mh-5 {
+    margin: 0 5rem;
+}
+
+.ml-1 {
+    margin-left: 1rem;
+}
+
+.ml-2 {
+    margin-left: 2rem;
+}
+
+.ml-3 {
+    margin-left: 3rem;
+}
+
+.ml-4 {
+    margin-left: 4rem;
+}
+
+.ml-5 {
+    margin-left: 5rem;
+}
+
+.mr-1 {
+    margin-right: 1rem;
+}
+
+.mr-2 {
+    margin-right: 2rem;
+}
+
+.mr-3 {
+    margin-right: 3rem;
+}
+
+.mr-4 {
+    margin-right: 4rem;
+}
+
+.mr-5 {
+    margin-right: 5rem;
+}
+
+.mt-1 {
+    margin-top: 1rem;
+}
+
+.mt-2 {
+    margin-top: 2rem;
+}
+
+.mt-3 {
+    margin-top: 3rem;
+}
+
+.mt-4 {
+    margin-top: 4rem;
+}
+
+.mt-5 {
+    margin-top: 5rem;
+}
+
+.mb-1 {
+    margin-bottom: 1rem;
+}
+
+.mb-2 {
+    margin-bottom: 2rem;
+}
+
+.mb-3 {
+    margin-bottom: 3rem;
+}
+
+.mb-4 {
+    margin-bottom: 4rem;
+}
+
+.mb-5 {
+    margin-bottom: 5rem;
+}
+
+
 .container {
     width: 1100px;
     max-width: 100%;
@@ -66,6 +207,10 @@ body {
     transition: 0.3s opacity;
 }
 
+.btn:focus {
+    outline: none;
+}
+
 .btn:hover {
     opacity: 0.9;
 }
@@ -73,6 +218,11 @@ body {
 .btn-primary {
     background-color: var(--primary-color);
     color: white;
+}
+
+.btn-secondary {
+    background-color: #ccc;
+    color: #333;
 }
 
 .btn-block {
@@ -83,7 +233,7 @@ form {
     background-color: white;
 }
 
-.form-group{
+.form-group {
     display: flex;
     flex-direction: column;
 }
@@ -99,6 +249,8 @@ form {
     border-radius: 5px;
     background: white;
     border: solid 1px #ccc;
+    font-size: 16px;
+    font-family: 'Koodak';
 }
 
 .form-control:focus {
@@ -115,8 +267,36 @@ form {
     grid-gap: 2rem;
 }
 
-.grid-item {
-    padding: 2rem;
-    color: white;
+.grid-2 {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+}
 
+.grid-6 {
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 1rem;
+}
+
+.list {
+    list-style: none;
+}
+
+.list-item {
+    width: 100%;
+    margin: 1rem 0;
+}
+
+.list-tile {
+    background-color: white;
+    box-shadow: 0 0 10px #ccc;
+    border-radius: 5px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.checkbox-container {
+    padding: 1rem;
+    display: flex;
 }
