--- a/views/teachers/dashboard.ejs
+++ b/views/teachers/dashboard.ejs
@@ -2,12 +2,12 @@
 
 <div class="container">
     <h1><%= teacher.name %> خوش آمدید</h1>
-    <!-- <div class="grid grid-3">
-        <a href="/admins/classes" class="btn btn-primary">مدیریت کلاس ها</a>
-        <a href="/admins/students" class="btn btn-primary">مدیریت دانش آموزان</a>
-        <a href="/admins/teachers" class="btn btn-primary">مدیریت معلمین</a>
-        <a href="/admins/quizes" class="btn btn-primary">مدیریت آزمون ها</a>
-    </div> -->
+    <div class="grid grid-3">
+        <a href="/teachers/question-pools" class="btn btn-primary">بانک سوالات</a>
+        <a href="/teachers/manage-students" class="btn btn-primary">مدیریت دانش آموزان</a>
+        <a href="/teachers/teachers" class="btn btn-primary">مدیریت معلمین</a>
+        <a href="/teachers/quizes" class="btn btn-primary">مدیریت آزمون ها</a>
+    </div>
 </div>
 
 <%- include('../includes/bottom.ejs') %>
