--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -9,6 +9,7 @@
         <% if(isLoggedIn) { %>
         <li>
             <form action="/logout" method="POST">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <button type="submit">خروج</button>
             </form>
         </li>
