--- a/views/admins/dashboard.ejs
+++ b/views/admins/dashboard.ejs
@@ -1,7 +1,7 @@
 <%- include('../includes/top.ejs') %> <%- include('../includes/nav.ejs') %>
 
 <div class="container">
-    <h1><%= admin.name %> خوش آمدید</h1>
+    <h1><%= admin.first_name %> <%= admin.last_name %> خوش آمدید</h1>
     <div class="grid grid-3">
         <a href="/admins/manage-classes" class="btn btn-primary">مدیریت کلاس ها</a>
         <a href="/admins/manage-students" class="btn btn-primary">مدیریت دانش آموزان</a>
