--- a/views/admins/login.ejs
+++ b/views/admins/login.ejs
@@ -32,6 +32,7 @@
                             name="password"
                         />
                     </div>
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <button type="submit" class="btn btn-primary btn-block">
                         ورود
                     </button>
