--- a/views/admins/register.ejs
+++ b/views/admins/register.ejs
@@ -17,8 +17,12 @@
             <div class="card-body">
                 <form action="/admins/register" method="post">
                     <div class="form-group">
-                        <label for="name">نام</label>
-                        <input type="text" class="form-control" name="name" />
+                        <label for="first_name">نام</label>
+                        <input type="text" class="form-control" name="first_name" />
+                    </div>
+                    <div class="form-group">
+                        <label for="last_name">نام خانوادگی</label>
+                        <input type="text" class="form-control" name="last_name" />
                     </div>
                     <div class="form-group">
                         <label for="username">نام کاربری</label>
@@ -44,6 +48,7 @@
                             name="password2"
                         />
                     </div>
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <button type="submit" class="btn btn-primary btn-block">
                         ایجاد حساب
                     </button>
