--- a/views/students/dashboard.ejs
+++ b/views/students/dashboard.ejs
@@ -1,7 +1,7 @@
 <%- include('../includes/top.ejs') %> <%- include('../includes/nav.ejs') %>
 
 <div class="container">
-    <h1><%= student.name %> خوش آمدید</h1>
+    <h1><%= student.first_name %> <%= student.last_name %> خوش آمدید</h1>
     <!-- <div class="grid grid-3">
         <a href="/admins/classes" class="btn btn-primary">مدیریت کلاس ها</a>
         <a href="/admins/students" class="btn btn-primary">مدیریت دانش آموزان</a>
