reworked admin controllers and views

--- a/views/admins/dashboard.ejs
+++ b/views/admins/dashboard.ejs
@@ -3,7 +3,7 @@
 <div class="container">
     <h1><%= admin.first_name %> <%= admin.last_name %> خوش آمدید</h1>
     <div class="grid grid-3">
-        <a href="/admins/manage-classes" class="btn btn-primary">مدیریت کلاس ها</a>
+        <a href="/admins/manage-courses" class="btn btn-primary">مدیریت کلاس ها</a>
         <a href="/admins/manage-students" class="btn btn-primary">مدیریت دانش آموزان</a>
         <a href="/admins/teachers" class="btn btn-primary">مدیریت معلمین</a>
         <a href="/admins/quizes" class="btn btn-primary">مدیریت آزمون ها</a>
