--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,6 +1,16 @@
+@font-face {
+    font-family: 'Koodak';
+    src: url('../fonts/BKoodakBold_0.ttf');
+}
+
+
 :root {
     --primary-color: #fc5364;
     --secondary-color: #8a9596;
+}
+
+button {
+    font-family: 'Koodak';
 }
 
 nav {
