--- a/views/admins/edit-course.ejs
+++ b/views/admins/edit-course.ejs
@@ -19,7 +19,7 @@
     <% } else { %>
     <ol class="grid grid-6">
         <% course.students.forEach(student => { %>
-        <li><%= student.first_name %> <%= student.first_name %></li>
+        <li><%= student.first_name %> <%= student.last_name %></li>
         <% }) %>
     </ol>
     <% } %>
