--- a/public/css/style.css
+++ b/public/css/style.css
@@ -197,6 +197,7 @@ body {
     border: none;
     cursor: pointer;
     display: block;
+    min-width: 2rem;
     padding: 1rem;
     margin: 1rem 0;
     text-decoration: none;
