--- a/views/admins/dashboard.ejs
+++ b/views/admins/dashboard.ejs
@@ -1,6 +1,7 @@
 <%- include('../includes/top.ejs') %> <%- include('../includes/nav.ejs') %>
 
 <div class="container">
+    <%- include('../includes/flash.ejs') %>
     <h1><%= admin.first_name %> <%= admin.last_name %> خوش آمدید</h1>
     <div class="grid grid-3">
         <a href="/admins/manage-courses" class="btn btn-primary">مدیریت کلاس ها</a>
