--- a/views/admins/edit-course-students.ejs
+++ b/views/admins/edit-course-students.ejs
@@ -1,5 +1,6 @@
 <%- include('../includes/top.ejs') %> <%- include('../includes/nav.ejs') %>
 <div class="container">
+    <%- include('../includes/flash.ejs') %>
     <h2>
         ویرایش دانش آموزان کلاس <%= course.name%> <%=
         course.teacher.first_name%> <%= course.teacher.last_name%>
