--- a/views/admins/manage-courses.ejs
+++ b/views/admins/manage-courses.ejs
@@ -1,5 +1,6 @@
 <%- include('../includes/top.ejs') %> <%- include('../includes/nav.ejs') %>
 <div class="container">
+    <%- include('../includes/flash.ejs') %>
     <div class="center">
         <div class="card">
             <div class="card-head">
