--- a/views/admins/manage-students.ejs
+++ b/views/admins/manage-students.ejs
@@ -1,5 +1,6 @@
 <%- include('../includes/top.ejs') %> <%- include('../includes/nav.ejs') %>
 <div class="container">
+    <%- include('../includes/flash.ejs') %>
     <% if (students.length === 0) { %>
         <h2>دانش‌ آموزی یافت نشد.</h2>
     <% } else { %>
