--- a/views/students/dashboard.ejs
+++ b/views/students/dashboard.ejs
@@ -1,6 +1,7 @@
 <%- include('../includes/top.ejs') %> <%- include('../includes/nav.ejs') %>
 
 <div class="container">
+    <%- include('../includes/flash.ejs') %>
     <h1><%= student.first_name %> <%= student.last_name %> خوش آمدید</h1>
     <!-- <div class="grid grid-3">
         <a href="/admins/classes" class="btn btn-primary">مدیریت کلاس ها</a>
