--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,6 +159,9 @@ body {
     margin-bottom: 5rem;
 }
 
+.d-flex {
+    display: flex;
+}
 
 .container {
     width: 1100px;
@@ -300,4 +303,16 @@ form {
 .checkbox-container {
     padding: 1rem;
     display: flex;
+}
+
+.file-input {
+    background: linear-gradient(top, #f9f9f9, #e3e3e3);
+    /* border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer; */
+}
+
+.file-input input[type="file"] {
+    /* visibility: hidden; */
 }
