--- a/views/students/login.ejs
+++ b/views/students/login.ejs
@@ -2,14 +2,7 @@
 
 <div class="container">
     <div class="center">
-        <% if (messages.error) { %>
-        <div class="alert alert-danger show" id="alert">
-            <button id="dismiss">
-                <i class="fa fa-times"></i>
-            </button>
-            <h3><%= messages.error %></h3>
-        </div>
-        <% } %>
+        <%- include('../includes/flash.ejs') %>
         <div class="card">
             <div class="card-head">
                 <h2>ورود دانش آموزان</h2>
