--- a/views/includes/bottom.ejs
+++ b/views/includes/bottom.ejs
@@ -1,6 +1,7 @@
 
 <script src="/js/alert.js"></script>
 <script src="/js/dialog.js"></script>
+<script src="/js/tab.js"></script>
 <script src="/js/modal.js"></script>
 </body>
 </html>
